tests/lex-fail/bad_bin_lit.fl.0.exp
Error: bad_bin_lit.fl(1,1): Missing base-2 integer literal digits
0b
^  
